[package]
name = "moulinette"
version = "0.1.0"
authors = ["Rémy Grünblatt <remy@grunblatt.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.5"
regex = "1"
lazy_static = "1.4.0"
rusqlite = "0.25.3"
chrono = "0.4.19"
clap = "3.0.0-beta.2"